FlightPath 5.x Changelog
========================

2017-11-30
  Fixed bug where courses with inf. repeats were not respecting minimum grades.
  
  Fixed another bug with inf. repeats, where substitutions were interfering with inf. course logic.
  

2017-11-26
  Fixed missing child group issue, caused by previous work (special thanks to Logan Bluth)
  

2017-11-15
  Introduced concept of "infinite repeats" in groups, for courses with an excessive
  amount of repeats allowed.  This greaty helps speed up FlightPath's group logic when
  loading a student.
  
  Added various function caches, and re-wrote some queries, in an effort to speed
  load time for FlightPath (special thanks to Logan Buth)
  

2017-11-09
  Added extra filtering to the filter_markup() function, which would repair
  any mismatched or faulty HTML tags.  This can happen when people paste incomplete HTML
  from Word or an email into a Comment.
  

2017-11-07
  Fixed an issue related to how a GroupList creates a clone().
  
  Added #group field to render array for course info popup.
  
  Added get_course_id array to CourseList object.

  Added extra option for Group::get_course_id()


2017-10-30
  Removed functionality of having a course always get selected by default in a popup group listing.
  

2017-10-18
  Made groups' internal machine name a required field, and forced them to be unique, in preparation of
  functionality for the Conditional Requirements module, as well as any other module which needs to
  identify groups by human-readable names.


2017-10-15
  Fixed bug when duplicating entire catalog year (typo in variable name for catalog_repeat).
  
  Fixed bug where it 'Back to degrees' link was linking to the wrong year.


2017-10-11
  Fixed mysql error in system.module.


2017-10-03
  Added extra caching & other techniques to speed up load times.  In some situations, load time has been decreased by 300%.
  
  Added new function, fpmct(), which is short for fpm(fp_debug_ct($val));


2017-09-24