@@ -1,6 +1,12 @@
 FlightPath 5.x Changelog
 ========================
 
+2017-12-5
+  To fix an issue where groups with branches were not respecting the grade sort order, I added
+  a new method to _GroupList: sort_best_grade_first_by_student_grades().  This helps sort branches
+  based on grades the student has earned.
+
+
 2017-11-30
   Fixed bug where courses with inf. repeats were not respecting minimum grades.
   
